<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MultiSigTrxResultDialog</class>
 <widget class="QDialog" name="MultiSigTrxResultDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>960</width>
    <height>543</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QWidget" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>960</width>
     <height>543</height>
    </rect>
   </property>
   <property name="WidgetStyle" stdset="0">
    <string>dialogBg</string>
   </property>
   <widget class="QWidget" name="containerWidget" native="true">
    <property name="geometry">
     <rect>
      <x>260</x>
      <y>41</y>
      <width>440</width>
      <height>460</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Microsoft YaHei UI Light</family>
     </font>
    </property>
    <property name="WidgetStyle" stdset="0">
     <string>container</string>
    </property>
    <widget class="QToolButton" name="okBtn">
     <property name="geometry">
      <rect>
       <x>172</x>
       <y>410</y>
       <width>96</width>
       <height>30</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Microsoft YaHei UI Light</family>
      </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
     </property>
     <property name="text">
      <string>确定</string>
     </property>
     <property name="BtnStyle" stdset="0">
      <string>ok</string>
     </property>
    </widget>
    <widget class="QToolButton" name="closeBtn">
     <property name="geometry">
      <rect>
       <x>415</x>
       <y>12</y>
       <width>13</width>
       <height>13</height>
      </rect>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="BtnStyle" stdset="0">
      <string>closeDialog</string>
     </property>
    </widget>
    <widget class="QLabel" name="infoLabel">
     <property name="geometry">
      <rect>
       <x>100</x>
       <y>30</y>
       <width>240</width>
       <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>生成多签交易成功！</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
     </property>
     <property name="textInteractionFlags">
      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>40</x>
       <y>240</y>
       <width>200</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>交易结构体</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="trxStructTextBrowser">
     <property name="geometry">
      <rect>
       <x>40</x>
       <y>270</y>
       <width>360</width>
       <height>120</height>
      </rect>
     </property>
    </widget>
    <widget class="QTextBrowser" name="trxCodeTextBrowser">
     <property name="geometry">
      <rect>
       <x>40</x>
       <y>110</y>
       <width>360</width>
       <height>120</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>40</x>
       <y>80</y>
       <width>200</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>交易字节码（使用公钥对此签名）</string>
     </property>
    </widget>
    <widget class="QToolButton" name="copyBtn">
     <property name="geometry">
      <rect>
       <x>380</x>
       <y>80</y>
       <width>18</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
      </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="BtnStyle" stdset="0">
      <string>copy</string>
     </property>
    </widget>
    <widget class="QToolButton" name="copyBtn2">
     <property name="geometry">
      <rect>
       <x>380</x>
       <y>240</y>
       <width>18</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
      </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="BtnStyle" stdset="0">
      <string>copy</string>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
